# ProjectManhattan

./: .gitignore  CMakeLists.txt  README.md  groups  index.md  project.config  scope_definition.md
app/avic/: CMakeLists.txt
app/avic/src/: your_stuff.cpp
app/inputhandler/: CMakeLists.txt  keyboard_input.cpp  main.cpp
app/inputhandler/include/: database.hpp  keyboard_input.hpp  readKeyboard.hpp  server.hpp  turn_indicator.hpp
app/inputhandler/src/: keyboard_input.cpp  server.cpp  turn_indicator.cpp
app/reo/: CMakeLists.txt  main.cpp
app/reo/include/: engine.hpp  engine.tpp  mainloop.hpp  parser.hpp  reotype.hpp  vehiclecharacteristic.hpp
app/reo/src/: engine.cpp  mainloop.cpp
data/: scope_definition.md
data/UML/: use_case_diagram.drawio
doc/: interfaces.txt  requirements.md
doc/UML/: activity_diagram.drawio  system_overview.drawio  use_case_diagram.drawio
lib/: CMakeLists.txt  can_data.hpp  hal_monitor.cpp  hal_monitor.hpp  main.cpp  socketcan.cpp  socketcan.hpp  writecan.cpp  writecan.hpp
lib/hal/include/: can_data.hpp  hal_monitor.hpp
lib/hal/src/: hal_monitor.cpp
lib/include/: hal_monitor.hpp  writecan.hpp
lib/socketcan/include/: socketcan.hpp
lib/socketcan/src/: socketcan.cpp
lib/src/: hal_monitor.cpp  socketcan.cpp  writecan.cpp
lib/writecan/include/: writecan.hpp
lib/writecan/src/: writecan.cpp
src/: main.cpp
test/: CMakeLists.txt
test/unit/: test_hal_monitor.cpp  test_hal_monitor.hpp
tools/: build.sh  run.sh
